# capturador_de_audio_video

./: .gitignore  Capturador.desktop  Capturador_2025.desktop  README.md  diagrama_reposirorio.md  ejecutar.sh  ejecutar_capturador.sh  grabar_pantalla.py  pyproject.toml  requirements.txt
docs/: architecture.md  development_setup.md  user_guide.md
packaging/linux/: build.sh  capturador-audio-video.desktop
src/: pyproject.toml
src/gui/: __init__.py
src/screen_recorder/: __main__.py  main.py
src/screen_recorder/core/: audio_utils.py  config_manager.py  ffmpeg_runner.py  recorder.py
src/screen_recorder/gui/: area_selection.py  main_window.py
src/screen_recorder/platform/: common.py  linux.py  windows.py
src/screen_recorder/tests/core/: test_recorder.py
src/screen_recorder/utils/: logger.py
