[project]
name = "capturador-de-audio-video"
version = "0.1.0"
description = "Grabador de pantalla y audio multiplataforma"
authors = [
    {name = "JORGE SISLEMA",email = " jrgsislema4@live.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
