[project]
name = "capturador-de-audio-video"
version = "0.1.0"
description = "Grabador de pantalla y audio multiplataforma"
authors = [
    {name = "JORGE SISLEMA", email = " jrgsislema4@live.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9" # Es buena práctica usar >= en lugar de solo la versión
dependencies = [
]

[tool.poetry] # <-- Sección añadida para configuración de Poetry
packages = [{include = "capturador_de_audio_video", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"] # Simplificado, usualmente funciona
build-backend = "poetry.core.masonry.api"